# models/e_cardsModel.js
@@ -3,16 +3,75 @@ const mongoose = require('mongoose');
 
 // Define a Mongoose schema for the 'E_cards' collection
 const E_cardsSchema = new mongoose.Schema({
-  // Define the schema fields and their types
-  firstName: String,
-  lastName: String,
+  firstName: {
+    type: String,
+    required: true
+  },
+  middleName: {
+    type: String,
+    required: false // Optional field
+  },
+  lastName: {
+    type: String,
+    required: true
+  },
+  occupation: {
+    type: String,
+    required: true
+  },
+  position: {
+    type: String,
+    required: true
+  },
+  officeAddress: {
+    type: String,
+    required: true
+  },
+  headquartersLocation: {
+    type: String,
+    required: true
+  },
+  subBusinessBranches: {
+    type: String,
+    required: true
+  },
+  contactNumber: {
+    type: String,
+    required: true
+  },
   email: {
     type: String,
-    unique: true
+    unique: true,
+    required: true
   },
-  favoriteColor: String,
-  birthday: Date
+  socialMediaHandles: {
+    type: String,
+    required: true
+  },
+  passportPhotograph: {
+    type: String,
+    required: true
+  }
 });
 
 // Create and export a Mongoose model for the 'E_cards' collection
 module.exports = mongoose.model('E_cards', E_cardsSchema);
+
+// // Import Mongoose library
+// const mongoose = require('mongoose');
+
+// // Define a Mongoose schema for the 'E_cards' collection
+// const E_cardsSchema = new mongoose.Schema({
+//   // Define the schema fields and their types
+//   firstName: String,
+//   lastName: String,
+//   email: {
+//     type: String,
+//     unique: true
+//   },
+//   favoriteColor: String,
+//   birthday: Date
+// });
+
+// // Create and export a Mongoose model for the 'E_cards' collection
+// module.exports = mongoose.model('E_cards', E_cardsSchema);
