# swagger.json
@@ -1,11 +1,11 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Contact API",
-    "description": "API documentation for the Contacts API. This API is designed to help you efficiently manage your contact information. Whether you need to create, retrieve, update, or delete contacts, this API has got you covered. With a user-friendly interface and comprehensive functionality, you can seamlessly integrate contact management into your applications.\n\n**Key Features:**\n\n- **Create Contacts:** Use the POST endpoint to add new contacts to your database, providing details like first name, last name, email, favorite color, and birthday in JSON format.\n\n- **Retrieve Contacts:** The GET endpoint allows you to fetch a list of all contacts or retrieve a specific contact by their unique ID.\n\n- **Update Contacts:** Easily update contact information using the PUT endpoint. Send the updated details in JSON format to modify existing contacts.\n\n- **Delete Contacts:** Remove contacts from your database using the DELETE endpoint. Specify the contact's ID to delete a specific entry.\n\n**Sample Requests and Responses:** We've provided sample JSON requests and responses for each endpoint to help you understand how to interact with the API effectively.\n\n**Error Handling:** The API includes error responses and status codes to guide you in case of any issues.\n\n**API Documentation:** Explore the detailed API documentation below to learn how to use each endpoint, the expected request structures, and response formats.\n\nStart managing your contacts effortlessly with the Contacts API. Integrate it into your applications to streamline contact management and enhance user experiences.",
+    "title": "E-Card Management API",
+    "description": "API documentation for the E-Card Management API. This API is designed to help you manage electronic business cards efficiently. Whether you need to create, retrieve, update, or delete e-cards, this API has got you covered. With a user-friendly interface and comprehensive functionality, you can seamlessly integrate e-card management into your applications.\n\n**Key Features:**\n\n- **Create E-Cards:** Use the POST endpoint to add new e-cards to your database, providing details like name, occupation, position, office address, contact number, email, social media handles, and passport photograph in JSON format.\n\n- **Retrieve E-Cards:** The GET endpoint allows you to fetch a list of all e-cards or retrieve a specific e-card by its unique ID.\n\n- **Update E-Cards:** Easily update e-card information using the PUT endpoint. Send the updated details in JSON format to modify existing e-cards.\n\n- **Delete E-Cards:** Remove e-cards from your database using the DELETE endpoint. Specify the e-card's ID to delete a specific entry.\n\n**Sample Requests and Responses:** We've provided sample JSON requests and responses for each endpoint to help you understand how to interact with the API effectively.\n\n**Error Handling:** The API includes error responses and status codes to guide you in case of any issues.\n\n**API Documentation:** Explore the detailed API documentation below to learn how to use each endpoint, the expected request structures, and response formats.\n\nStart managing your e-cards effortlessly with the E-Card Management API. Integrate it into your applications to streamline e-card management and enhance user experiences.",
     "version": "1.0.0"
   },
-  "host": "https://e-card-application.onrender.com",
+  "host": "cse341-4.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
@@ -21,7 +21,7 @@
         }
       }
     },
-    "/contacts/": {
+    "/e_cards/": {
       "post": {
         "description": "",
         "parameters": [
@@ -34,16 +34,37 @@
                 "firstName": {
                   "example": "any"
                 },
+                "middleName": {
+                  "example": "any"
+                },
                 "lastName": {
+                  "example": "any"
+                },
+                "occupation": {
+                  "example": "any"
+                },
+                "position": {
+                  "example": "any"
+                },
+                "officeAddress": {
+                  "example": "any"
+                },
+                "headquartersLocation": {
+                  "example": "any"
+                },
+                "subBusinessBranches": {
+                  "example": "any"
+                },
+                "contactNumber": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "socialMediaHandles": {
                   "example": "any"
                 },
-                "birthday": {
+                "passportPhotograph": {
                   "example": "any"
                 }
               }
@@ -77,7 +98,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/e_cards/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -121,16 +142,37 @@
                 "firstName": {
                   "example": "any"
                 },
+                "middleName": {
+                  "example": "any"
+                },
                 "lastName": {
+                  "example": "any"
+                },
+                "occupation": {
+                  "example": "any"
+                },
+                "position": {
+                  "example": "any"
+                },
+                "officeAddress": {
+                  "example": "any"
+                },
+                "headquartersLocation": {
+                  "example": "any"
+                },
+                "subBusinessBranches": {
+                  "example": "any"
+                },
+                "contactNumber": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "socialMediaHandles": {
                   "example": "any"
                 },
-                "birthday": {
+                "passportPhotograph": {
                   "example": "any"
                 }
               }
@@ -140,6 +182,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -162,9 +207,6 @@
         "responses": {
           "204": {
             "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
